--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -44,7 +44,7 @@ html {
   -o-tab-size: 4;
      tab-size: 4;
   /* 3 */
-  font-family: 'Lora' serif, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Lora, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
 }
 
@@ -553,9 +553,16 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.mx-4{
-  margin-left: 1rem;
-  margin-right: 1rem;
+.fixed{
+  position: fixed;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .mb-6{
@@ -570,12 +577,12 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
+.mb-3{
+  margin-bottom: 0.75rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .ml-8{
@@ -586,6 +593,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mt-5{
+  margin-top: 1.25rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -594,8 +605,8 @@ video {
   margin-left: 1.5rem;
 }
 
-.mt-5{
-  margin-top: 1.25rem;
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -646,12 +657,12 @@ video {
   height: 1.75rem;
 }
 
-.h-5{
-  height: 1.25rem;
-}
-
 .h-16{
   height: 4rem;
+}
+
+.h-4{
+  height: 1rem;
 }
 
 .w-36{
@@ -672,10 +683,6 @@ video {
 
 .w-32{
   width: 8rem;
-}
-
-.w-8{
-  width: 2rem;
 }
 
 .w-4\/12{
@@ -706,20 +713,12 @@ video {
   align-items: center;
 }
 
-.justify-end{
-  justify-content: flex-end;
-}
-
 .justify-center{
   justify-content: center;
 }
 
 .justify-between{
   justify-content: space-between;
-}
-
-.justify-around{
-  justify-content: space-around;
 }
 
 .gap-x-1{
@@ -735,21 +734,16 @@ video {
   border-radius: 0.125rem;
 }
 
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
 .border-2{
   border-width: 2px;
 }
 
-.border-x-2{
-  border-left-width: 2px;
-  border-right-width: 2px;
-}
-
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
 }
 
 .border-gray-200{
@@ -813,6 +807,11 @@ video {
   padding-right: 1rem;
 }
 
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -822,7 +821,7 @@ video {
   text-align: center;
 }
 
-.font-cursive{
+.font-logo{
   font-family: 'The Nautigal', cursive ;
 }
 
@@ -841,6 +840,16 @@ video {
   line-height: 1.75rem;
 }
 
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -856,14 +865,9 @@ video {
   line-height: 2.5rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-stone-600{
@@ -884,6 +888,11 @@ video {
 .text-stone-500{
   --tw-text-opacity: 1;
   color: rgb(120 113 108 / var(--tw-text-opacity));
+}
+
+.text-stone-200{
+  --tw-text-opacity: 1;
+  color: rgb(231 229 228 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -920,8 +929,8 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:ml-6{
-    margin-left: 1.5rem;
+  .md\:mb-6{
+    margin-bottom: 1.5rem;
   }
 
   .md\:mt-2{
@@ -932,24 +941,24 @@ video {
     display: flex;
   }
 
+  .md\:hidden{
+    display: none;
+  }
+
   .md\:h-10{
     height: 2.5rem;
-  }
-
-  .md\:h-7{
-    height: 1.75rem;
-  }
-
-  .md\:w-12{
-    width: 3rem;
   }
 
   .md\:w-4\/12{
     width: 33.333333%;
   }
 
-  .md\:w-3\/4{
-    width: 75%;
+  .md\:w-7\/12{
+    width: 58.333333%;
+  }
+
+  .md\:w-3\/6{
+    width: 50%;
   }
 
   .md\:max-w-7xl{
@@ -960,8 +969,8 @@ video {
     flex-direction: row;
   }
 
-  .md\:border-2{
-    border-width: 2px;
+  .md\:border-r-2{
+    border-right-width: 2px;
   }
 
   .md\:border-stone-300{
@@ -978,6 +987,21 @@ video {
     padding-right: 0px;
   }
 
+  .md\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .md\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .md\:text-base{
     font-size: 1rem;
     line-height: 1.5rem;
@@ -992,10 +1016,6 @@ video {
 
   .lg\:mt-20{
     margin-top: 5rem;
-  }
-
-  .lg\:ml-6{
-    margin-left: 1.5rem;
   }
 
   .lg\:mt-5{
