Minor changes in mobile view

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -557,12 +557,24 @@ video {
   position: fixed;
 }
 
+.top-2{
+  top: 0.5rem;
+}
+
+.right-4{
+  right: 1rem;
+}
+
 .top-0{
   top: 0px;
 }
 
 .right-0{
   right: 0px;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .mb-6{
@@ -593,6 +605,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.mt-16{
+  margin-top: 4rem;
+}
+
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -603,10 +619,6 @@ video {
 
 .ml-6{
   margin-left: 1.5rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
 }
 
 .flex{
@@ -661,10 +673,6 @@ video {
   height: 4rem;
 }
 
-.h-4{
-  height: 1rem;
-}
-
 .w-36{
   width: 9rem;
 }
@@ -685,10 +693,6 @@ video {
   width: 8rem;
 }
 
-.w-4\/12{
-  width: 33.333333%;
-}
-
 .w-16{
   width: 4rem;
 }
@@ -697,8 +701,18 @@ video {
   width: 10rem;
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+.translate-x-0{
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-full{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -721,9 +735,9 @@ video {
   justify-content: space-between;
 }
 
-.gap-x-1{
-  -moz-column-gap: 0.25rem;
-       column-gap: 0.25rem;
+.gap-x-10{
+  -moz-column-gap: 2.5rem;
+       column-gap: 2.5rem;
 }
 
 .gap-y-10{
@@ -865,9 +879,9 @@ video {
   line-height: 2.5rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
 }
 
 .text-stone-600{
@@ -902,6 +916,14 @@ video {
 
 .outline{
   outline-style: solid;
+}
+
+.duration-200{
+  transition-duration: 200ms;
+}
+
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hover\:cursor-pointer:hover{
@@ -967,6 +989,10 @@ video {
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:justify-between{
+    justify-content: space-between;
   }
 
   .md\:border-r-2{
@@ -1087,19 +1113,19 @@ video {
     line-height: 1.75rem;
   }
 
-  .lg\:text-4xl{
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-3xl{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .lg\:text-7xl{
+    font-size: 4.5rem;
+    line-height: 1;
   }
 
   .lg\:text-5xl{
     font-size: 3rem;
     line-height: 1;
-  }
-
-  .lg\:text-3xl{
-    font-size: 1.875rem;
-    line-height: 2.25rem;
   }
 
   .lg\:text-2xl{
