--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -557,6 +557,10 @@ video {
   position: fixed;
 }
 
+.absolute{
+  position: absolute;
+}
+
 .top-2{
   top: 0.5rem;
 }
@@ -575,6 +579,10 @@ video {
 
 .z-50{
   z-index: 50;
+}
+
+.z-30{
+  z-index: 30;
 }
 
 .mb-6{
@@ -613,12 +621,24 @@ video {
   margin-top: 1.25rem;
 }
 
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
 
 .ml-6{
   margin-left: 1.5rem;
+}
+
+.ml-5{
+  margin-left: 1.25rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
 }
 
 .flex{
@@ -673,6 +693,34 @@ video {
   height: 4rem;
 }
 
+.h-\[1200px\]{
+  height: 1200px;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-12{
+  height: 3rem;
+}
+
+.h-4\/5{
+  height: 80%;
+}
+
+.h-3\/6{
+  height: 50%;
+}
+
+.h-2\/6{
+  height: 33.333333%;
+}
+
+.h-\[600px\]{
+  height: 600px;
+}
+
 .w-36{
   width: 9rem;
 }
@@ -695,6 +743,14 @@ video {
 
 .w-16{
   width: 4rem;
+}
+
+.w-\[800px\]{
+  width: 800px;
+}
+
+.w-12{
+  width: 3rem;
 }
 
 .w-40{
@@ -748,6 +804,23 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
+.rounded-t-\[70px\]{
+  border-top-left-radius: 70px;
+  border-top-right-radius: 70px;
+}
+
 .border-2{
   border-width: 2px;
 }
@@ -775,6 +848,11 @@ video {
   border-color: rgb(214 211 209 / var(--tw-border-opacity));
 }
 
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-stone-50{
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 249 / var(--tw-bg-opacity));
@@ -800,6 +878,31 @@ video {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
+.bg-stone-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
+}
+
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-green-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
+.bg-green-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
+
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
 .p-20{
   padding: 5rem;
 }
@@ -814,6 +917,10 @@ video {
 
 .p-8{
   padding: 2rem;
+}
+
+.p-10{
+  padding: 2.5rem;
 }
 
 .px-4{
@@ -884,6 +991,11 @@ video {
   line-height: 1;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-stone-600{
   --tw-text-opacity: 1;
   color: rgb(87 83 78 / var(--tw-text-opacity));
@@ -907,6 +1019,11 @@ video {
 .text-stone-200{
   --tw-text-opacity: 1;
   color: rgb(231 229 228 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1060,6 +1177,18 @@ video {
     height: 24rem;
   }
 
+  .lg\:h-4\/5{
+    height: 80%;
+  }
+
+  .lg\:h-\[600px\]{
+    height: 600px;
+  }
+
+  .lg\:h-8{
+    height: 2rem;
+  }
+
   .lg\:w-2\/5{
     width: 40%;
   }
@@ -1070,6 +1199,18 @@ video {
 
   .lg\:w-4\/12{
     width: 33.333333%;
+  }
+
+  .lg\:w-\[400px\]{
+    width: 400px;
+  }
+
+  .lg\:w-4\/5{
+    width: 80%;
+  }
+
+  .lg\:w-8{
+    width: 2rem;
   }
 
   .lg\:w-40{
@@ -1091,6 +1232,11 @@ video {
   .lg\:gap-x-24{
     -moz-column-gap: 6rem;
          column-gap: 6rem;
+  }
+
+  .lg\:rounded-t-3xl{
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
   }
 
   .lg\:px-0{
@@ -1131,6 +1277,11 @@ video {
   .lg\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .lg\:text-sm{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .lg\:no-underline{
