--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -621,6 +621,10 @@ video {
   margin-left: 1.5rem;
 }
 
+.ml-2{
+  margin-left: 0.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -748,6 +752,15 @@ video {
   border-radius: 0.125rem;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
+.rounded-t-\[70px\]{
+  border-top-left-radius: 70px;
+  border-top-right-radius: 70px;
+}
+
 .border-2{
   border-width: 2px;
 }
@@ -775,6 +788,11 @@ video {
   border-color: rgb(214 211 209 / var(--tw-border-opacity));
 }
 
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-stone-50{
   --tw-bg-opacity: 1;
   background-color: rgb(250 250 249 / var(--tw-bg-opacity));
@@ -800,6 +818,11 @@ video {
   background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }
 
+.bg-stone-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
+}
+
 .p-20{
   padding: 5rem;
 }
@@ -814,6 +837,10 @@ video {
 
 .p-8{
   padding: 2rem;
+}
+
+.p-10{
+  padding: 2.5rem;
 }
 
 .px-4{
@@ -884,6 +911,11 @@ video {
   line-height: 1;
 }
 
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-stone-600{
   --tw-text-opacity: 1;
   color: rgb(87 83 78 / var(--tw-text-opacity));
@@ -907,6 +939,11 @@ video {
 .text-stone-200{
   --tw-text-opacity: 1;
   color: rgb(231 229 228 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1060,6 +1097,10 @@ video {
     height: 24rem;
   }
 
+  .lg\:h-4\/5{
+    height: 80%;
+  }
+
   .lg\:w-2\/5{
     width: 40%;
   }
@@ -1074,6 +1115,10 @@ video {
 
   .lg\:w-40{
     width: 10rem;
+  }
+
+  .lg\:w-4\/5{
+    width: 80%;
   }
 
   .lg\:max-w-7xl{
@@ -1091,6 +1136,11 @@ video {
   .lg\:gap-x-24{
     -moz-column-gap: 6rem;
          column-gap: 6rem;
+  }
+
+  .lg\:rounded-t-3xl{
+    border-top-left-radius: 1.5rem;
+    border-top-right-radius: 1.5rem;
   }
 
   .lg\:px-0{
