--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -557,10 +557,6 @@ video {
   position: fixed;
 }
 
-.absolute{
-  position: absolute;
-}
-
 .top-2{
   top: 0.5rem;
 }
@@ -579,10 +575,6 @@ video {
 
 .z-50{
   z-index: 50;
-}
-
-.z-30{
-  z-index: 30;
 }
 
 .mb-6{
@@ -621,8 +613,8 @@ video {
   margin-top: 1.25rem;
 }
 
-.mr-2{
-  margin-right: 0.5rem;
+.ml-2{
+  margin-left: 0.5rem;
 }
 
 .mt-2{
@@ -631,17 +623,6 @@ video {
 
 .ml-6{
   margin-left: 1.5rem;
-}
-
-<<<<<<< HEAD
-=======
-.ml-5{
-  margin-left: 1.25rem;
-}
-
->>>>>>> d04f87a7e46f1edfb5813c6e99678273234c00c2
-.ml-2{
-  margin-left: 0.5rem;
 }
 
 .flex{
@@ -696,34 +677,6 @@ video {
   height: 4rem;
 }
 
-.h-\[1200px\]{
-  height: 1200px;
-}
-
-.h-5{
-  height: 1.25rem;
-}
-
-.h-12{
-  height: 3rem;
-}
-
-.h-4\/5{
-  height: 80%;
-}
-
-.h-3\/6{
-  height: 50%;
-}
-
-.h-2\/6{
-  height: 33.333333%;
-}
-
-.h-\[600px\]{
-  height: 600px;
-}
-
 .w-36{
   width: 9rem;
 }
@@ -746,14 +699,6 @@ video {
 
 .w-16{
   width: 4rem;
-}
-
-.w-\[800px\]{
-  width: 800px;
-}
-
-.w-12{
-  width: 3rem;
 }
 
 .w-40{
@@ -807,24 +752,10 @@ video {
   border-radius: 0.125rem;
 }
 
-<<<<<<< HEAD
-=======
-.rounded-full{
-  border-radius: 9999px;
-}
-
->>>>>>> d04f87a7e46f1edfb5813c6e99678273234c00c2
 .rounded{
   border-radius: 0.25rem;
 }
 
-<<<<<<< HEAD
-=======
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
->>>>>>> d04f87a7e46f1edfb5813c6e99678273234c00c2
 .rounded-t-\[70px\]{
   border-top-left-radius: 70px;
   border-top-right-radius: 70px;
@@ -892,29 +823,6 @@ video {
   background-color: rgb(245 245 244 / var(--tw-bg-opacity));
 }
 
-<<<<<<< HEAD
-=======
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-green-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-green-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
-}
-
-.bg-green-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
->>>>>>> d04f87a7e46f1edfb5813c6e99678273234c00c2
 .p-20{
   padding: 5rem;
 }
@@ -1045,6 +953,10 @@ video {
 
 .outline{
   outline-style: solid;
+}
+
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .duration-200{
@@ -1193,17 +1105,6 @@ video {
     height: 80%;
   }
 
-<<<<<<< HEAD
-=======
-  .lg\:h-\[600px\]{
-    height: 600px;
-  }
-
-  .lg\:h-8{
-    height: 2rem;
-  }
-
->>>>>>> d04f87a7e46f1edfb5813c6e99678273234c00c2
   .lg\:w-2\/5{
     width: 40%;
   }
@@ -1216,24 +1117,12 @@ video {
     width: 33.333333%;
   }
 
-  .lg\:w-\[400px\]{
-    width: 400px;
-  }
-
   .lg\:w-4\/5{
     width: 80%;
-  }
-
-  .lg\:w-8{
-    width: 2rem;
   }
 
   .lg\:w-40{
     width: 10rem;
-  }
-
-  .lg\:w-4\/5{
-    width: 80%;
   }
 
   .lg\:max-w-7xl{
@@ -1296,11 +1185,6 @@ video {
   .lg\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
-  }
-
-  .lg\:text-sm{
-    font-size: 0.875rem;
-    line-height: 1.25rem;
   }
 
   .lg\:no-underline{
