--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -625,6 +625,14 @@ video {
   margin-left: 1.5rem;
 }
 
+.ml-3{
+  margin-left: 0.75rem;
+}
+
+.ml-1{
+  margin-left: 0.25rem;
+}
+
 .flex{
   display: flex;
 }
@@ -731,12 +739,20 @@ video {
   flex-direction: column;
 }
 
+.items-start{
+  align-items: flex-start;
+}
+
 .items-end{
   align-items: flex-end;
 }
 
 .items-center{
   align-items: center;
+}
+
+.justify-start{
+  justify-content: flex-start;
 }
 
 .justify-center{
@@ -851,6 +867,10 @@ video {
   padding: 2.5rem;
 }
 
+.p-0{
+  padding: 0px;
+}
+
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
@@ -864,11 +884,6 @@ video {
 .py-8{
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-
-.py-20{
-  padding-top: 5rem;
-  padding-bottom: 5rem;
 }
 
 .py-10{
@@ -886,14 +901,14 @@ video {
   padding-bottom: 0.25rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .text-center{
@@ -1059,6 +1074,10 @@ video {
     width: 33.333333%;
   }
 
+  .md\:w-full{
+    width: 100%;
+  }
+
   .md\:w-7\/12{
     width: 58.333333%;
   }
@@ -1073,6 +1092,10 @@ video {
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:items-start{
+    align-items: flex-start;
   }
 
   .md\:justify-between{
@@ -1095,6 +1118,16 @@ video {
   .md\:px-0{
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .md\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:px-5{
