--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -625,14 +625,6 @@ video {
   margin-left: 1.5rem;
 }
 
-.ml-3{
-  margin-left: 0.75rem;
-}
-
-.ml-1{
-  margin-left: 0.25rem;
-}
-
 .flex{
   display: flex;
 }
@@ -685,6 +677,10 @@ video {
   height: 4rem;
 }
 
+.h-52{
+  height: 13rem;
+}
+
 .w-36{
   width: 9rem;
 }
@@ -721,6 +717,10 @@ video {
   width: 10rem;
 }
 
+.w-auto{
+  width: auto;
+}
+
 .translate-x-0{
   --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -739,20 +739,12 @@ video {
   flex-direction: column;
 }
 
-.items-start{
-  align-items: flex-start;
-}
-
 .items-end{
   align-items: flex-end;
 }
 
 .items-center{
   align-items: center;
-}
-
-.justify-start{
-  justify-content: flex-start;
 }
 
 .justify-center{
@@ -845,6 +837,11 @@ video {
 .bg-stone-100{
   --tw-bg-opacity: 1;
   background-color: rgb(245 245 244 / var(--tw-bg-opacity));
+}
+
+.bg-green-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
 .p-20{
@@ -1088,6 +1085,10 @@ video {
 
   .md\:max-w-7xl{
     max-width: 80rem;
+  }
+
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:flex-row{
