Added Notion Api

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&family=The+Nautigal:wght@700&display=swap');
 
 /*
-! tailwindcss v3.2.1 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -32,6 +32,8 @@
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
+6. Use the user's configured `sans` font-variation-settings by default.
 */
 
 html {
@@ -46,6 +48,10 @@ html {
   /* 3 */
   font-family: Lora, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
+  font-feature-settings: normal;
+  /* 5 */
+  font-variation-settings: normal;
+  /* 6 */
 }
 
 /*
@@ -186,6 +192,10 @@ optgroup,
 select,
 textarea {
   font-family: inherit;
+  /* 1 */
+  font-feature-settings: inherit;
+  /* 1 */
+  font-variation-settings: inherit;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -338,6 +348,14 @@ menu {
 }
 
 /*
+Reset default styling for dialogs.
+*/
+
+dialog {
+  padding: 0;
+}
+
+/*
 Prevent resizing textareas horizontally by default.
 */
 
@@ -432,6 +450,9 @@ video {
   --tw-pan-y:  ;
   --tw-pinch-zoom:  ;
   --tw-scroll-snap-strictness: proximity;
+  --tw-gradient-from-position:  ;
+  --tw-gradient-via-position:  ;
+  --tw-gradient-to-position:  ;
   --tw-ordinal:  ;
   --tw-slashed-zero:  ;
   --tw-numeric-figure:  ;
@@ -479,6 +500,9 @@ video {
   --tw-pan-y:  ;
   --tw-pinch-zoom:  ;
   --tw-scroll-snap-strictness: proximity;
+  --tw-gradient-from-position:  ;
+  --tw-gradient-via-position:  ;
+  --tw-gradient-to-position:  ;
   --tw-ordinal:  ;
   --tw-slashed-zero:  ;
   --tw-numeric-figure:  ;
@@ -524,8 +548,8 @@ video {
   position: relative;
 }
 
-.top-2{
-  top: 0.5rem;
+.right-0{
+  right: 0px;
 }
 
 .right-4{
@@ -536,8 +560,8 @@ video {
   top: 0px;
 }
 
-.right-0{
-  right: 0px;
+.top-2{
+  top: 0.5rem;
 }
 
 .z-50{
@@ -554,88 +578,52 @@ video {
   margin-bottom: 1.5rem;
 }
 
-.mb-6{
-  margin-bottom: 1.5rem;
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
-.mb-4{
-  margin-bottom: 1rem;
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
+.mb-20{
+  margin-bottom: 5rem;
 }
 
 .mb-3{
   margin-bottom: 0.75rem;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.ml-8{
-  margin-left: 2rem;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
+.mb-4{
+  margin-bottom: 1rem;
 }
 
 .mb-5{
   margin-bottom: 1.25rem;
 }
 
-.mt-16{
-  margin-top: 4rem;
-}
-
-.ml-2{
-  margin-left: 0.5rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
-}
-
-.mt-5{
-  margin-top: 1.25rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
+.mb-6{
+  margin-bottom: 1.5rem;
 }
 
 .ml-12{
   margin-left: 3rem;
 }
 
-.mr-6{
-  margin-right: 1.5rem;
+.ml-2{
+  margin-left: 0.5rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
+.ml-3{
+  margin-left: 0.75rem;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.ml-8{
+  margin-left: 2rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
-}
-
-.mr-3{
-  margin-right: 0.75rem;
-}
-
-.mb-10{
-  margin-bottom: 2.5rem;
-}
-
-.mb-20{
-  margin-bottom: 5rem;
+.mr-2{
+  margin-right: 0.5rem;
 }
 
 .mr-4{
@@ -646,8 +634,36 @@ video {
   margin-right: 1.25rem;
 }
 
-.mb-2{
-  margin-bottom: 0.5rem;
+.mr-6{
+  margin-right: 1.5rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-16{
+  margin-top: 4rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
+}
+
+.mt-6{
+  margin-top: 1.5rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .flex{
@@ -666,28 +682,20 @@ video {
   display: none;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
 .h-10{
   height: 2.5rem;
 }
 
-.h-full{
-  height: 100%;
-}
-
-.h-auto{
-  height: auto;
+.h-16{
+  height: 4rem;
 }
 
 .h-2\/4{
   height: 50%;
 }
 
-.h-8{
-  height: 2rem;
+.h-32{
+  height: 8rem;
 }
 
 .h-48{
@@ -698,68 +706,64 @@ video {
   height: 1.75rem;
 }
 
-.h-16{
-  height: 4rem;
+.h-8{
+  height: 2rem;
 }
 
 .h-96{
   height: 24rem;
 }
 
-.h-32{
-  height: 8rem;
+.h-auto{
+  height: auto;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-screen{
+  height: 100vh;
 }
 
 .min-h-screen{
   min-height: 100vh;
 }
 
-.w-36{
-  width: 9rem;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-2\/12{
-  width: 16.666667%;
-}
-
-.w-7\/12{
-  width: 58.333333%;
-}
-
-.w-32{
-  width: 8rem;
+.w-1\/4{
+  width: 25%;
 }
 
 .w-16{
   width: 4rem;
 }
 
-.w-1\/4{
-  width: 25%;
+.w-2\/12{
+  width: 16.666667%;
 }
 
 .w-3\/4{
   width: 75%;
 }
 
-.w-24{
-  width: 6rem;
+.w-32{
+  width: 8rem;
 }
 
-.w-2\/6{
-  width: 33.333333%;
-}
-
-.w-5\/6{
-  width: 83.333333%;
+.w-36{
+  width: 9rem;
 }
 
 .w-40{
   width: 10rem;
+}
+
+.w-7\/12{
+  width: 58.333333%;
+}
+
+.w-full{
+  width: 100%;
 }
 
 .max-w-7xl{
@@ -825,16 +829,16 @@ video {
   row-gap: 2.5rem;
 }
 
-.rounded-sm{
-  border-radius: 0.125rem;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-md{
   border-radius: 0.375rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
+.rounded-sm{
+  border-radius: 0.125rem;
 }
 
 .rounded-t-\[70px\]{
@@ -846,27 +850,12 @@ video {
   border-width: 2px;
 }
 
-.border-t-2{
-  border-top-width: 2px;
-}
-
 .border-b-2{
   border-bottom-width: 2px;
 }
 
-.border-gray-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.border-stone-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(87 83 78 / var(--tw-border-opacity));
-}
-
-.border-stone-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(214 211 209 / var(--tw-border-opacity));
+.border-t-2{
+  border-top-width: 2px;
 }
 
 .border-black{
@@ -874,29 +863,24 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-gray-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-stone-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(214 211 209 / var(--tw-border-opacity));
+}
+
 .border-stone-400{
   --tw-border-opacity: 1;
   border-color: rgb(168 162 158 / var(--tw-border-opacity));
 }
 
-.bg-stone-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-stone-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(87 83 78 / var(--tw-bg-opacity));
-}
-
-.bg-red-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+.border-stone-600{
+  --tw-border-opacity: 1;
+  border-color: rgb(87 83 78 / var(--tw-border-opacity));
 }
 
 .bg-green-400{
@@ -909,9 +893,9 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-stone-500{
+.bg-red-600{
   --tw-bg-opacity: 1;
-  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-stone-100{
@@ -924,41 +908,56 @@ video {
   background-color: rgb(168 162 158 / var(--tw-bg-opacity));
 }
 
-.p-20{
-  padding: 5rem;
+.bg-stone-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
 }
 
-.p-2{
-  padding: 0.5rem;
+.bg-stone-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(120 113 108 / var(--tw-bg-opacity));
 }
 
-.p-4{
-  padding: 1rem;
+.bg-stone-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(87 83 78 / var(--tw-bg-opacity));
 }
 
-.p-8{
-  padding: 2rem;
-}
-
-.p-10{
-  padding: 2.5rem;
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .p-0{
   padding: 0px;
 }
 
-.p-5{
-  padding: 1.25rem;
-}
-
 .p-1{
   padding: 0.25rem;
 }
 
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-2{
+  padding: 0.5rem;
+}
+
+.p-20{
+  padding: 5rem;
+}
+
+.p-4{
+  padding: 1rem;
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
+.p-8{
+  padding: 2rem;
 }
 
 .px-2{
@@ -966,9 +965,14 @@ video {
   padding-right: 0.5rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 
 .py-1{
@@ -981,11 +985,6 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -996,9 +995,9 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-10{
@@ -1029,19 +1028,9 @@ video {
   font-family: 'The Nautigal', cursive ;
 }
 
-.text-5xl{
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl{
@@ -1049,19 +1038,14 @@ video {
   line-height: 2.25rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-6xl{
@@ -1069,39 +1053,29 @@ video {
   line-height: 1;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
-.text-stone-600{
-  --tw-text-opacity: 1;
-  color: rgb(87 83 78 / var(--tw-text-opacity));
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
-.text-stone-200{
-  --tw-text-opacity: 1;
-  color: rgb(231 229 228 / var(--tw-text-opacity));
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-stone-500{
-  --tw-text-opacity: 1;
-  color: rgb(120 113 108 / var(--tw-text-opacity));
-}
-
-.text-stone-300{
-  --tw-text-opacity: 1;
-  color: rgb(214 211 209 / var(--tw-text-opacity));
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-gray-500{
@@ -1112,6 +1086,31 @@ video {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-stone-200{
+  --tw-text-opacity: 1;
+  color: rgb(231 229 228 / var(--tw-text-opacity));
+}
+
+.text-stone-300{
+  --tw-text-opacity: 1;
+  color: rgb(214 211 209 / var(--tw-text-opacity));
+}
+
+.text-stone-500{
+  --tw-text-opacity: 1;
+  color: rgb(120 113 108 / var(--tw-text-opacity));
+}
+
+.text-stone-600{
+  --tw-text-opacity: 1;
+  color: rgb(87 83 78 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1156,14 +1155,14 @@ video {
   cursor: pointer;
 }
 
-.hover\:bg-stone-100:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-red-400:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-stone-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 244 / var(--tw-bg-opacity));
 }
 
 .hover\:underline:hover{
@@ -1185,12 +1184,12 @@ video {
     margin-bottom: 1.5rem;
   }
 
-  .md\:mt-2{
-    margin-top: 0.5rem;
-  }
-
   .md\:mr-12{
     margin-right: 3rem;
+  }
+
+  .md\:mt-2{
+    margin-top: 0.5rem;
   }
 
   .md\:flex{
@@ -1205,10 +1204,6 @@ video {
     height: 2.5rem;
   }
 
-  .md\:h-6{
-    height: 1.5rem;
-  }
-
   .md\:h-14{
     height: 3.5rem;
   }
@@ -1217,8 +1212,8 @@ video {
     width: 50%;
   }
 
-  .md\:w-full{
-    width: 100%;
+  .md\:w-52{
+    width: 13rem;
   }
 
   .md\:w-7\/12{
@@ -1229,12 +1224,8 @@ video {
     width: 66.666667%;
   }
 
-  .md\:w-6{
-    width: 1.5rem;
-  }
-
-  .md\:w-52{
-    width: 13rem;
+  .md\:w-full{
+    width: 100%;
   }
 
   .md\:max-w-7xl{
@@ -1288,9 +1279,9 @@ video {
     padding-right: 0px;
   }
 
-  .md\:py-20{
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+  .md\:px-5{
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
   }
 
   .md\:px-8{
@@ -1298,29 +1289,19 @@ video {
     padding-right: 2rem;
   }
 
-  .md\:px-5{
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
-  }
-
   .md\:py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
 
-  .md\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
+  .md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 
-  .md\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
-  .md\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .md\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-3xl{
@@ -1328,14 +1309,24 @@ video {
     line-height: 2.25rem;
   }
 
-  .md\:text-xl{
-    font-size: 1.25rem;
+  .md\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-lg{
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .md\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .md\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1343,6 +1334,11 @@ video {
   .lg\:mx-auto{
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .lg\:my-10{
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
   }
 
   .lg\:mt-20{
@@ -1361,20 +1357,16 @@ video {
     height: 5rem;
   }
 
-  .lg\:h-96{
-    height: 24rem;
-  }
-
   .lg\:h-4\/5{
     height: 80%;
   }
 
-  .lg\:w-2\/5{
-    width: 40%;
+  .lg\:h-96{
+    height: 24rem;
   }
 
-  .lg\:w-64{
-    width: 16rem;
+  .lg\:w-2\/5{
+    width: 40%;
   }
 
   .lg\:w-4\/12{
@@ -1383,6 +1375,14 @@ video {
 
   .lg\:w-4\/5{
     width: 80%;
+  }
+
+  .lg\:w-40{
+    width: 10rem;
+  }
+
+  .lg\:w-64{
+    width: 16rem;
   }
 
   .lg\:max-w-7xl{
@@ -1412,9 +1412,9 @@ video {
     padding-right: 0px;
   }
 
-  .lg\:text-base{
-    font-size: 1rem;
-    line-height: 1.5rem;
+  .lg\:text-2xl{
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .lg\:text-3xl{
@@ -1422,9 +1422,9 @@ video {
     line-height: 2.25rem;
   }
 
-  .lg\:text-lg{
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .lg\:text-5xl{
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-7xl{
@@ -1432,37 +1432,23 @@ video {
     line-height: 1;
   }
 
-  .lg\:text-5xl{
-    font-size: 3rem;
-    line-height: 1;
+  .lg\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
-  .lg\:text-2xl{
-    font-size: 1.5rem;
-    line-height: 2rem;
+  .lg\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .lg\:no-underline{
     text-decoration-line: none;
-  }
-}
-
-.\[\&\>th\]\:border-r-2>th{
-  border-right-width: 2px;
-}
-
-.\[\&\>th\]\:border-stone-100>th{
-  --tw-border-opacity: 1;
-  border-color: rgb(245 245 244 / var(--tw-border-opacity));
-}
-
-.\[\&\>th\]\:pl-2>th{
-  padding-left: 0.5rem;
-}
-
-@media (min-width: 768px){
-  .md\:\[\&\>th\]\:border-none>th{
-    border-style: none;
   }
 }
 
@@ -1485,18 +1471,21 @@ video {
   }
 }
 
-@media (min-width: 1024px){
-  .lg\:my-10{
-    margin-top: 2.5rem;
-    margin-bottom: 2.5rem;
-  }
+.\[\&\>th\]\:border-r-2>th{
+  border-right-width: 2px;
+}
 
-  .lg\:w-40{
-    width: 10rem;
-  }
+.\[\&\>th\]\:border-stone-100>th{
+  --tw-border-opacity: 1;
+  border-color: rgb(245 245 244 / var(--tw-border-opacity));
+}
 
-  .lg\:text-xl{
-    font-size: 1.25rem;
-    line-height: 1.75rem;
+.\[\&\>th\]\:pl-2>th{
+  padding-left: 0.5rem;
+}
+
+@media (min-width: 768px){
+  .md\:\[\&\>th\]\:border-none>th{
+    border-style: none;
   }
 }
